server/droneserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-server
  labels:
    app: drone-server
  annotations:
spec:
  selector:
    matchLabels:
      app: drone-server
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: drone-server
    spec:
      containers:
        - name: drone-server
          image: drone/drone:1.6.5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
            - containerPort: 443
