server/droneserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: droneserver
  labels:
    app: drone-server
spec:
  type: LoadBalancer
  selector:
    app: drone-server
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
    - protocol: TCP
      name: https
      port: 443
      targetPort: 443
