server/droneserver-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: drone-server
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
    - host: 13.234.195.244
      http:
        paths:
          - backend:
              serviceName: droneserver
              servicePort: 80
            path: /
